--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
+<!--
 <html>
 <header><title>This is title</title></header>
 <body>
 Hello world hihi
+</body>
+</html>
+ -->
+
+<body> 
+<header> 
+	<img src="http://wiki.selfhtml.org/mediawiki/images/3/39/Selfhtml-Logo-Neu.png" alt="SELFHTML - Die Energie des Verstehens"> 
+	<h1>Herzlich Willkommen!</h1> 
+</header> 
+
+<article> 
+	<h1>selfhtml.org</h1> 
+	<p>Die offizielle Heimatadresse ... </p> 
+</article> 
 </body>
 </html>
