--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@ Hello world hihi
 
 <body> 
 <header> 
-	<img src="http://wiki.selfhtml.org/mediawiki/images/3/39/Selfhtml-Logo-Neu.png" alt="SELFHTML - Die Energie des Verstehens"> 
-	<h1>Herzlich Willkommen!</h1> 
+	<!--<img src="http://wiki.selfhtml.org/mediawiki/images/3/39/Selfhtml-Logo-Neu.png" alt="SELFHTML - Die Energie des Verstehens"> 
+	-->
+	<h1>Zusatzmaterial zur Vorlesung 
+	<br> Mathematik für Informatiker 1
+	</h1> 
 </header> 
 
 <article> 
-	<h1>selfhtml.org</h1> 
-	<p>Die offizielle Heimatadresse ... </p> 
+	<h1>Prüfungen</h1> 
+	<p>Termin, Altklausuren, Vorbereitungen TODO </p> 
+	<h1>Skripte</h1> 
+	<p>TODO </p> 
+	<h1>Vorlesungszusammenfassung</h1> 
+	<p>TODO, Videos, Schrift, Latex, Proofwiki </p>
+	<h1>Zettel</h1> 
+	<p>TODO mit Loesungsvorschlaege</p>
+	<h1>Literaturliste</h1> 
+	<p>TODO </p>
 </article> 
 </body>
 </html>
