--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-	<iframe frameborder="0" src="source/navbar.html" width="230px" height="3000px" scrolling="no"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" position="absolute" src="source/navbar.html" width="230px" height="3000px" scrolling="no"; bgcolor="#C9D3DE">
 	</iframe>
-	<iframe frameborder="0"src="source/home.html" width="1000px" height="3000px" scrolling="no" name="iframe_a"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" position="absolute" src="source/home.html" width="1000px" height="3000px" scrolling="no" name="iframe_a"; bgcolor="#C9D3DE">
 	</iframe>
 
 	<h5> These are the four windows inside main page. 
