--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 </head>
 <body>
 
-	<iframe frameborder="0" position="absolute" src="source/navbar.html" width="230px" height="3000px" scrolling="no"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" position="absolute" src="source/navbar.html" width="230px" height="300px" scrolling="no"; bgcolor="#C9D3DE">
 	</iframe>
-	<iframe frameborder="0" position="absolute" src="source/home.html" width="1000px" height="3000px" scrolling="no" name="iframe_a"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" position="absolute" src="source/home.html" width="1000px" height="300px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
 	</iframe>
 
-	<h5> These are the four windows inside main page. 
-		First is webpage, Second is link of PDF, third one is attached pdf document and fourth one is attached document of docx file.
-	</h5>
 </body>
 </html>
