--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-	<iframe frameborder="0" position="top" src="source/navbar.html" width="230px" height="3000px" scrolling="no"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" style="display:inline" src="source/navbar.html" width="230px" height="3000px" scrolling="no"; bgcolor="#C9D3DE">
 	</iframe>
-	<iframe frameborder="0" position="top" src="source/home.html" width="750px" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" style="display:inline" src="source/home.html" width="750px" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
 	</iframe>
 
 </body>
