--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!Doctype html>
 <html>
 <head>
+	<style>
+		.box{
+    			float:left;
+    			margin-right:20px;
+		}
+
+		.clear{
+			clear:both;
+		}
+	</style>
+
 	<title>IMI1-Extra</title>
 		
 	<h1> Zusatzmaterial zur Vorlesung IMI1 </h1>
 </head>
 <body>
 
-	<iframe frameborder="0" style="display:inline" src="source/navbar.html" width="230px" height="3000px" scrolling="no"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" src="source/navbar.html" width="230px" height="3000px" scrolling="no"; bgcolor="#C9D3DE">
 	</iframe>
-	<iframe frameborder="0" style="display:inline" src="source/home.html" width="750px" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" src="source/home.html" width="750px" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
 	</iframe>
 
 </body>
