--- a/source/navbar_old.html
+++ b/source/navbar_old.html
@@ -6,24 +6,21 @@
 	    list-style-type: none;
 	    margin: 0;
 	    padding: 0;
-	    overflow: hidden;
-	    background-color: #333;
-	}
-
-	li {
-	    float: left;
+	    width: 200px;
+	    background-color: #f1f1f1;
 	}
 
 	li a {
 	    display: block;
-	    color: white;
-	    text-align: center;
-	    padding: 14px 16px;
+	    color: #000;
+	    padding: 8px 16px;
 	    text-decoration: none;
 	}
 
+	/* Change the link color on hover */
 	li a:hover {
-	    background-color: #111;
+	    background-color: #555;
+	    color: white;
 	}
 	</style>
 </head>
