--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-	<iframe frameborder="0" src="source/navbar.html" width="100%" height="62px" scrolling="no"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" src="source/navbar.html" width="100%" height="10%" scrolling="no"; bgcolor="#C9D3DE">
 	</iframe>
-	<iframe frameborder="0" src="source/home.html" width="100%" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" src="source/home.html" width="100%" height="89%" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
 	</iframe>
 
 </body>
