--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<iframe frameborder="0" src="source/navbar.html" width="1000px" height="64px" scrolling="no"; bgcolor="#C9D3DE">
 	</iframe>
-	<iframe frameborder="0" src="source/home.html" width="1000px%" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" src="source/home.html" width="1000px" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
 	</iframe>
 
 </body>
