erste Version der Webseite

--- a/source/home.html
+++ b/source/home.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 
-	TODO
+	Das ist hier eine inoffizielle Webseite zur Vorlesung, 
+	wo hauptsaechlich Materialien als Unterstuetzung zu den 
+	Tutorien hochgeladen werden. Diese Webseite ersetzt weder
+	den Besuch zur Vorlesung, noch zu den Uebungen, sondern
+	dient als zusaetzliche Lernhilfe.
 
 </body>
 </html>
