--- a/source/navbar.html
+++ b/source/navbar.html
@@ -30,15 +30,10 @@
 <body>
 	<ul>
 	  <li><a href="home.html" target="iframe_a">Home</a></li>
-	  <li><a href="termine.html" target="iframe_a">Termine</a></li>
-	  <li><a href="skriptum.html" target="iframe_a">Skriptum</a></li>
-	  <li><a href="zettel.html" target="iframe_a">Zettel</a></li>
-	  <li><a href="vorbereitung.html" target="iframe_a">Vorbereitung</a></li>
-	  <li><a href="videos.html" target="iframe_a">Videos</a></li>
-	  <li><a href="zusammenfassung.html" target="iframe_a">Zusammenfassungen</a></li>
-	  <li><a href="literatur.html" target="iframe_a">Literatur</a></li>
+	  <!-- <li><a href="termine.html" target="iframe_a">Termine</a></li> -->
+	  <li><a href="lsg_skizze.html" target="iframe_a">Loesungsskizzen</a></li>
+	  <li><a href="lernhilfe.html" target="iframe_a">Lernhilfe</a></li>
 	</ul>
 
 </body>
 </html>
-
