--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
 	<title>IMI1-Extra</title>
 		
-	<h1> Zusatzmaterial zur Vorlesung IMI1 </h1>
+	<h1> Zusatzmaterial zur Vorlesung IMI1 im Wintersemester 2017/18</h1>
 </head>
 <body>
 
-	<iframe frameborder="0" src="source/navbar.html" width="1000px" height="64px" scrolling="no"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" src="source/navbar.html" width="1150px" height="64px" scrolling="no"; bgcolor="#C9D3DE">
 	</iframe>
-	<iframe frameborder="0" src="source/home.html" width="1000px" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
+	<iframe frameborder="0" src="source/home.html" width="1150px" height="3000px" scrolling="yes" name="iframe_a"; bgcolor="#C9D3DE">
 	</iframe>
 
 </body>
