Blatt02_Loesungen, Protokoll2, neue Webseiten und Dokumente angefuegt

--- a/source/lernhilfe.html
+++ b/source/lernhilfe.html
@@ -4,11 +4,49 @@
 	<title>Lernhilfe </title>
 </head>
 <body>
+	<h2> Themenuebersicht auf zwei Cheat-Sheets </h2> 
+	Im letzten Semester wurde ein Uebersichtszettel zu allen Definitionen und Saetzen erstellt (ohne Beweise) 
+	erstellt. Hier koennen jedoch etliche Tippfehler enthalten sein, sodass dieser sich als Spickzettel 
+	weniger eignet.
+	<br> <br>
+	<a href="PDFs/imi1_uebersicht.pdf"download>IMI1-Uebersicht</a>
+
 	<h2> Fehlerprotokolle zu den Abgaben </h2> 
 	Die Fehlerprotokolle fassen typische Fehler der Abgaben pro Aufgabenserie zusammen, 
 	um aehnliche Fehler in der Zukunft zu vermeiden. 
 	<br> <br>
-	<a href="PDFs/imi1_fehlerprotokoll_01.pdf"download>Protokoll 01</a>	
+	<a href="PDFs/imi1_fehlerprotokoll_01.pdf"download>Protokoll 01</a>
+	<br> <br>
+	<a href="PDFs/imi1_fehlerprotokoll_02.pdf"download>Protokoll 02</a>
+
+	<h2> Das Kurzfragensystem KeKs </h2>
+	Es gibt ein Kurzfragensystem zu verschiedenen Mathematik-Themen und Unterkapiteln,
+	welches euch zettel- und auch klausurtypische Kurzfragen stellt, die ihr in Form
+	von Multiple-Choice-Aufgaben beantworten koennt. Somit lassen sich wichtige
+	mathematische Begriffe und Zusammenhaenge gut wiederholen.
+	<br> <br>
+	<a href="https://keks.mathi.uni-heidelberg.de/"download>Zum System KeKs</a>
+
+	<!-- <h2> Spickzettel bzw. PDF-Dokumente von Danny </h2> -->
+	<!-- <br> <br> Mein Spickzettel TODO -->
+	<!-- <br> <br> Gabis Kartei TODO -->
+	<!-- <br> <br> Dannys Zusammenfassung TODO -->
+	
+	<h2> Nuetzliche Wikipedia-Artikel und Wiki-Seiten </h2>
+	<!-- TODO den unteren Kommentar nach Abgabe von Blatt 03 wieder einsetzen -->
+	<!-- <a href="https://proofwiki.org/wiki/Absorption_Laws_(Boolean_Algebras)" target="_top">Beweisskizze zum Absorbtionsgesetz</a> -->
+	<br> <br>
+	<a href="https://de.wikipedia.org/wiki/NAND-Gatter" target="_top">Logikausdruecke nur mit NAND-Gattern</a>	
+	<br> <br>
+	<a href="https://de.wikipedia.org/wiki/NOR-Gatter" target="_top">Logikausdruecke nur mit NOR-Gattern</a>	
+	<br> <br>
+	<a href="https://de.wikipedia.org/wiki/Konjunktive_Normalform" target="_top">KNF: Erklaerung und Beispiel</a>	
+	<br> <br>
+	<a href="https://de.wikipedia.org/wiki/Disjunktive_Normalform" target="_top">DNF: Erklaerung und Beispiel</a>
+
+	<!-- <h2> Lehrvideos </h2> -->
+
+	
 
 </body>
 </html>
