--- a/source/navbar.html
+++ b/source/navbar.html
@@ -33,6 +33,9 @@
 	  <!-- <li><a href="termine.html" target="iframe_a">Termine</a></li> -->
 	  <li><a href="lsg_skizze.html" target="iframe_a">Loesungsskizzen</a></li>
 	  <li><a href="lernhilfe.html" target="iframe_a">Lernhilfe</a></li>
+	  <!-- <li><a href="zusammenfassungen.html" target="iframe_a">Zusammenfassungen</a></li> -->
+	  <li><a href="quellen.html" target="iframe_a">Quellen</a></li>
+	  <li><a href="python.html" target="iframe_a">Python</a></li>
 	</ul>
 
 </body>
