--- a/source/lsg_skizze.html
+++ b/source/lsg_skizze.html
@@ -12,6 +12,12 @@
 	<a href="PDFs/blatt01_lsg.zip">Loesung Blatt 01</a>
 	<br>
 	(Anmerkung: Hier wurde nur Aufgabe 01 geloest)
+	<br> <br>
+	<a href="PDFs/blatt02_lsg.zip">Loesung Blatt 02</a>
+	<!--	
+	<br> <br>
+	<a href="PDFs/blatt03_lsg.zip">Loesung Blatt 03</a>
+	-->
 	
 
 </body>
