--- a/source/lernhilfe.html
+++ b/source/lernhilfe.html
@@ -33,8 +33,7 @@
 	<!-- <br> <br> Dannys Zusammenfassung TODO -->
 	
 	<h2> Nuetzliche Wikipedia-Artikel und Wiki-Seiten </h2>
-	<!-- TODO den unteren Kommentar nach Abgabe von Blatt 03 wieder einsetzen -->
-	<!-- <a href="https://proofwiki.org/wiki/Absorption_Laws_(Boolean_Algebras)" target="_top">Beweisskizze zum Absorbtionsgesetz</a> -->
+	<a href="https://proofwiki.org/wiki/Absorption_Laws_(Boolean_Algebras)" target="_top">Beweisskizze zum Absorbtionsgesetz</a>
 	<br> <br>
 	<a href="https://de.wikipedia.org/wiki/NAND-Gatter" target="_top">Logikausdruecke nur mit NAND-Gattern</a>	
 	<br> <br>
@@ -43,7 +42,10 @@
 	<a href="https://de.wikipedia.org/wiki/Konjunktive_Normalform" target="_top">KNF: Erklaerung und Beispiel</a>	
 	<br> <br>
 	<a href="https://de.wikipedia.org/wiki/Disjunktive_Normalform" target="_top">DNF: Erklaerung und Beispiel</a>
-
+	<br> <br>
+	<!--
+	<a href="https://proofwiki.org/wiki/Inclusion-Exclusion_Principle" target="_top">Beweisskizzen zur allgemeinen Inklusions-Exklusions-Formel</a>
+	-->
 	<!-- <h2> Lehrvideos </h2> -->
 
 	
