--- a/source/quellen.html
+++ b/source/quellen.html
@@ -12,6 +12,15 @@
 		Vorlesungsskript von Frau Dr. Alexandra Koethe aus dem Wintersemester 2013/14
 	</a>
 		
+	<h2> proofwiki </h2>
+	Die Webseite proofwiki ist im Prinzip eine kleine Beweisdatenbank, die gerade in
+	fundamentale Mathematik wie Logik, Mengenlehre und Elemente der Topologie und Algebra
+	teilweise besser beschrieben und auch anfängerfreundlicher erklärt ist, als so manche
+	Fachliteratur. Des weiteren sind die Quellenangaben der jeweiligen Artikel eventuell hilfreich.
+	<br> <br>
+	<a href="https://proofwiki.org/wiki/Main_Page"download>
+		Zur proofwiki-Webseite
+	</a>
 
 	<h2> Lehrbuecher </h2> 
 	Folgende Lehrbuecher sind entweder kostenlos über HEIDI oder ueber eine Google-Suche
