Protokoll3, topologische Beweise mit Videos hinzugefuegt

--- a/source/lernhilfe.html
+++ b/source/lernhilfe.html
@@ -18,6 +18,8 @@
 	<a href="PDFs/imi1_fehlerprotokoll_01.pdf"download>Protokoll 01</a>
 	<br> <br>
 	<a href="PDFs/imi1_fehlerprotokoll_02.pdf"download>Protokoll 02</a>
+	<br> <br>
+	<a href="PDFs/imi1_fehlerprotokoll_03.pdf"download>Protokoll 03</a>
 
 	<h2> Das Kurzfragensystem KeKs </h2>
 	Es gibt ein Kurzfragensystem zu verschiedenen Mathematik-Themen und Unterkapiteln,
@@ -32,7 +34,7 @@
 	<!-- <br> <br> Gabis Kartei TODO -->
 	<!-- <br> <br> Dannys Zusammenfassung TODO -->
 	
-	<h2> Nuetzliche Wikipedia-Artikel und Wiki-Seiten </h2>
+	<h2> Nuetzliche Wikipedia-Artikel, Wiki-Seiten und sonstiges </h2>
 	<a href="https://proofwiki.org/wiki/Absorption_Laws_(Boolean_Algebras)" target="_top">Beweisskizze zum Absorbtionsgesetz</a>
 	<br> <br>
 	<a href="https://de.wikipedia.org/wiki/NAND-Gatter" target="_top">Logikausdruecke nur mit NAND-Gattern</a>	
@@ -43,10 +45,23 @@
 	<br> <br>
 	<a href="https://de.wikipedia.org/wiki/Disjunktive_Normalform" target="_top">DNF: Erklaerung und Beispiel</a>
 	<br> <br>
-	<!--
 	<a href="https://proofwiki.org/wiki/Inclusion-Exclusion_Principle" target="_top">Beweisskizzen zur allgemeinen Inklusions-Exklusions-Formel</a>
-	-->
-	<!-- <h2> Lehrvideos </h2> -->
+
+	<!-- allgemeine Exklusions-Inklusions-Formel: https://de.wikipedia.org/wiki/Prinzip_von_Inklusion_und_Exklusion -->
+	
+	<!-- http://massmatics.de/merkzettel/index.php#!263:Rechenregeln_fuer_Mengen -->
+
+	<!-- https://de.wikibooks.org/wiki/Beweisarchiv:_Mengenlehre:_Mengenoperation:_Distributivgesetz -->
+
+	
+	<br> <br>
+	<a href="https://proofwiki.org/wiki/Composite_of_Injections_is_Injection" target="_top">Beweis zur Komposition injektiver Abbildungen </a>
+	<br> <br>
+	<a href="https://proofwiki.org/wiki/Injection_if_Composite_is_Injection" target="_top">Beweis injektive Teilabbildung </a>
+	<br> <br>
+	<a href="https://proofwiki.org/wiki/Composite_of_Surjections_is_Surjection" target="_top">Beweis zur Komposition surjektiver Abbildungen </a>
+	<br> <br>
+	<a href="https://proofwiki.org/wiki/Surjection_if_Composite_is_Surjection" target="_top">Beweis surjektive Teilabbildung </a>
 
 	
 
