--- a/source/navbar.html
+++ b/source/navbar.html
@@ -35,6 +35,7 @@
 	  <li><a href="lernhilfe.html" target="iframe_a">Lernhilfe</a></li>
 	  <!-- <li><a href="zusammenfassungen.html" target="iframe_a">Zusammenfassungen</a></li> -->
 	  <li><a href="quellen.html" target="iframe_a">Quellen</a></li>
+	  <li><a href="videos.html" target="iframe_a">Videos</a></li>
 	  <li><a href="python.html" target="iframe_a">Python</a></li>
 	</ul>
 
