--- a/source/python.html
+++ b/source/python.html
@@ -48,6 +48,8 @@
   </div>
   -->
 
+  <!-- Mengen, Logikteil mit Rueckgabewert der richtigen Belegung ueberarbeiten, Venn Diagramme, Verknuepfungstafel, nullteilerfrei, Z/pZ, Fermat usw --> 
+
   <!-- Hier ist ENDE -->
 </div>
 
