--- a/source/lsg_skizze.html
+++ b/source/lsg_skizze.html
@@ -16,6 +16,8 @@
 	<a href="PDFs/blatt02_lsg.zip">Loesung Blatt 02</a>	
 	<br> <br>
 	<a href="PDFs/blatt03_lsg.zip">Loesung Blatt 03</a>
+	<br> <br>
+	<a href="PDFs/blatt04_lsg.zip">Loesung Blatt 04</a>
 
 </body>
 </html>
