--- a/source/lsg_skizze.html
+++ b/source/lsg_skizze.html
@@ -18,6 +18,13 @@
 	<a href="PDFs/blatt03_lsg.zip">Loesung Blatt 03</a>
 	<br> <br>
 	<a href="PDFs/blatt04_lsg.zip">Loesung Blatt 04</a>
+	<br> <br>
+	Keine L&ouml;sung zu Blatt 05. F&uuml;r Aufgabe 5.1 und 5.3 gibt es
+	Erkl&auml;rvideos in der Video-Rubrik
+	<br> <br>
+	Keine L&ouml;sung zu Blatt 06
+	<br> <br>
+	<a href="PDFs/blatt07_lsg.zip">Loesung Blatt 07</a>
 
 </body>
 </html>
