--- a/source/python.html
+++ b/source/python.html
@@ -14,15 +14,68 @@
   <!-- Hier kommen die jupyter-Webseiten -->
 
   <h2>Wahrheitstafeln in Python</h2>
-  <!-- <p>Click on the button to toggle between showing and hiding content.</p>  -->
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#pprint">
   	Aufklappen
   </button>
   <div id="pprint" class="collapse">
-	<!-- style='zoom:50%; width:500px; height:500px;' -->
     <iframe style='zoom:70%' align="left" src="jupyter/Wahrheitstabelle.html" 
       width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
   </div>
+
+  <h2>Berechnen einer Potenzmenge</h2>
+  <!-- data-target="NAME" anpassen  -->
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#potenz">
+  	Aufklappen
+  </button>
+  <div id="potenz" class="collapse">
+	<!-- id="NAME" anpassen -->
+    <iframe style='zoom:70%' align="left" src="jupyter/Potenzmenge.html" 
+      width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
+  </div>
+
+  <h2>Cantorsche Paarfunktion</h2>
+  <!-- data-target="NAME" anpassen  -->
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#paarfunktion">
+  	Aufklappen
+  </button>
+  <div id="paarfunktion" class="collapse">
+	<!-- id="NAME" anpassen -->
+    <iframe style='zoom:70%' align="left" src="jupyter/Cantorsche+Paarfunktion.html" 
+      width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
+  </div>
+
+  <h2>Multiplikationstafel im Restklassenring</h2>
+  <!-- data-target="NAME" anpassen  -->
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#modularmulttafel">
+  	Aufklappen
+  </button>
+  <div id="modularmulttafel" class="collapse">
+	<!-- id="NAME" anpassen -->
+    <iframe style='zoom:70%' align="left" src="jupyter/Multiplikationstafeln+in+Z_x.html" 
+      width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
+  </div>
+
+  <h2>Erweiterter Euklidischer Algorithmus</h2>
+  <!-- data-target="#NAME" anpassen  -->
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#xeuklid">
+  	Aufklappen
+  </button>
+  <div id="xeuklid" class="collapse">
+	<!-- id="#NAME" anpassen -->
+    <iframe style='zoom:70%' align="left" src="jupyter/Erweiterter+euklidischer+Algorithmus+und+modulare+Inverse.html" 
+      width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
+  </div>
+
+<!-- Muss nur noch einkommentiert werden.
+  <h2>Rechnen mit komplexen Zahlen</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#komplex">
+  	Aufklappen
+  </button>
+  <div id="komplex" class="collapse">
+    <iframe style='zoom:70%' align="left" src="jupyter/Komplexe+Zahlen.html" 
+      width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
+  </div>
+-->
 
   <!--
   <h2>Plotten in Python</h2>
