--- a/source/quellen.html
+++ b/source/quellen.html
@@ -15,7 +15,7 @@
 	<h2> proofwiki </h2>
 	Die Webseite proofwiki ist im Prinzip eine kleine Beweisdatenbank, die gerade in
 	fundamentale Mathematik wie Logik, Mengenlehre und Elemente der Topologie und Algebra
-	teilweise besser beschrieben und auch anfängerfreundlicher erklärt ist, als so manche
+	teilweise besser beschrieben und auch anf&auml;ngerfreundlicher erkl&auml;rt ist, als so manche
 	Fachliteratur. Des weiteren sind die Quellenangaben der jeweiligen Artikel eventuell hilfreich.
 	<br> <br>
 	<a href="https://proofwiki.org/wiki/Main_Page"download>
@@ -23,16 +23,24 @@
 	</a>
 
 	<h2> Lehrbuecher </h2> 
-	Folgende Lehrbuecher sind entweder kostenlos über HEIDI oder ueber eine Google-Suche
-	erhaeltlich.
+	Folgende Lehrb&uuml;cher sind entweder kostenlos über HEIDI oder &uuml;ber eine Google-Suche
+	erh&auml;ltlich.
 	<br> <br>
-	<b>Aufgabensammlung Mathematik von Wallner und Herbert</b> (ueber HEIDI)
+	<b>Aufgabensammlung Mathematik von Wallner und Herbert</b> (&uuml;ber HEIDI)
 	<br>
-	(Enthaelt Aufgaben zur Induktion aehnlich wie bei Aufgabenserie 01)
+	(Enth&auml;lt Aufgaben zur Induktion &auml;hnlich wie bei Aufgabenserie 01)
 	<br> <br>
-	<b>Concrete Mathematics von Knuth</b> (ueber Google)
+	<b>Concrete Mathematics von Knuth</b> (&uuml;ber Google)
 	<br>
-	(Enthaelt detaillierte Beschreibungen zur floor- und ceil-Funktion)
+	(Enth&auml;lt detaillierte Beschreibungen zur floor- und ceil-Funktion)
+	<br> <br>
+	<a href="https://www.mathi.uni-heidelberg.de/~kasten/files/Skripte/ss16funktheo1.pdf"download>
+		<b>Vorlesungsskript zur Funktionentheorie von Herrn Dr. Kasten</b>
+	</a>
+	<br>
+	(Enth&auml;t eine &Uuml;bersicht zu den komplexen Zahlen. Siehe Seite 3 bis 14)
+
+<!-- Umlaute: &ouml; -->
 
 
 </body>
