Blatt 08 und 09 Lsg auf die Webseite hinzugefuegt

--- a/source/lsg_skizze.html
+++ b/source/lsg_skizze.html
@@ -25,6 +25,10 @@
 	Keine L&ouml;sung zu Blatt 06
 	<br> <br>
 	<a href="PDFs/blatt07_lsg.zip">Loesung Blatt 07</a>
+	<br> <br>
+	<a href="PDFs/blatt08_lsg.zip">Loesung Blatt 08</a>
+	<br> <br>
+	<a href="PDFs/blatt09_lsg.zip">Loesung Blatt 09</a>
 
 </body>
 </html>
