PythonSkripte bzgl. komplexe Zahlen und LGS Loesern geuppt

--- a/source/python.html
+++ b/source/python.html
@@ -66,7 +66,6 @@
       width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
   </div>
 
-<!-- Muss nur noch einkommentiert werden.
   <h2>Rechnen mit komplexen Zahlen</h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#komplex">
   	Aufklappen
@@ -75,7 +74,15 @@
     <iframe style='zoom:70%' align="left" src="jupyter/Komplexe+Zahlen.html" 
       width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
   </div>
--->
+
+<h2>Loesen von linearen Gleichungssystem</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#lgs">
+  	Aufklappen
+  </button>
+  <div id="lgs" class="collapse">
+    <iframe style='zoom:70%' align="left" src="jupyter/LGS+loesen.html" 
+      width="1100" height="1400" frameborder="0" allowTransparency="true" scrolling="yes"></iframe>
+  </div>
 
   <!--
   <h2>Plotten in Python</h2>
