Blatt 10 and 11 added

--- a/source/lsg_skizze.html
+++ b/source/lsg_skizze.html
@@ -29,6 +29,11 @@
 	<a href="PDFs/blatt08_lsg.zip">Loesung Blatt 08</a>
 	<br> <br>
 	<a href="PDFs/blatt09_lsg.zip">Loesung Blatt 09</a>
+	<br> <br>
+	<a href="PDFs/blatt10_lsg.zip">Loesung Blatt 10</a>
+	<br Danke an Dani, fuer die Bereitstellung der Loesungen fuer Blatt 10.
+	<br> <br>
+	<a href="PDFs/blatt11_lsg.zip">Loesung Blatt 11</a>
 
 </body>
 </html>
