--- a/source/lsg_skizze.html
+++ b/source/lsg_skizze.html
@@ -34,6 +34,7 @@
 	<br Danke an Dani, fuer die Bereitstellung der Loesungen fuer Blatt 10.
 	<br> <br>
 	<a href="PDFs/blatt11_lsg.zip">Loesung Blatt 11</a>
+	<br> Fehler auf Seite 3 bei der Matrix SD1 muss in der ersten Zeile, vierte Spalte eine 24 anstatt 27 stehen!
 
 </body>
 </html>
