Danksagung an Dani

--- a/source/lsg_skizze.html
+++ b/source/lsg_skizze.html
@@ -31,7 +31,8 @@
 	<a href="PDFs/blatt09_lsg.zip">Loesung Blatt 09</a>
 	<br> <br>
 	<a href="PDFs/blatt10_lsg.zip">Loesung Blatt 10</a>
-	<br Danke an Dani, fuer die Bereitstellung der Loesungen fuer Blatt 10.
+	<br>
+	Danke an Dani, fuer die Bereitstellung der Loesungen fuer Blatt 10.
 	<br> <br>
 	<a href="PDFs/blatt11_lsg.zip">Loesung Blatt 11</a>
 	<br> Fehler auf Seite 3 bei der Matrix SD1 muss in der ersten Zeile, vierte Spalte eine 24 anstatt 27 stehen!
